Feature - Adds logic to change background color to generated linear gradient

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 		<title>Linear Gradient Gen</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body>
+	<body id="body-style">
 		<h1>Linear Gradient Gen</h1>
-		<input type="color" name="color1" value="#00ff00" id="" />
-		<input type="color" name="color2" value="#0000ff" id="" />
+		<input type="color" name="color1" value="#00ff00" id="color1" />
+		<input type="color" name="color2" value="#0000ff" id="color2" />
 		<h2>Current CSS Background</h2>
-		<h3></h3>
+		<h3>linear-gradient(to right, rgb(0, 0, 255), rgb(255, 255, 255));</h3>
+		<input type="button" value="Generate Random Gradient" />
 
 		<script src="script.js"></script>
 	</body>
