--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<h3>linear-gradient(to right, rgb(0, 0, 255), rgb(255, 255, 255));</h3>
 		<input type="button" value="Generate Random Gradient" />
 
+		<p class="author">
+			By:
+			<span><a href="https://github.com/wptechprodigy">Waheed Afolabi</a></span>
+		</p>
+
 		<script src="script.js"></script>
 	</body>
 </html>
